--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container p-5 my-5 border">
         <h1>Backtracking</h1>
-        <p>Copywrite &#169;2002 by David Matuszek.</p>
+        <p>Copywrite &#169;2002 by Abhimanyu..</p>
         <p>Backtracking is a form of recursion.</p>
 
         <p>The usual scenario is that you are faced with a number of options , and you must choose one of these . After
